Create new features and solved bugs on Gson deserealize